--- a/cloud-config-server/src/main/resources/application.properties
+++ b/cloud-config-server/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 server.port=8888
-spring.cloud.config.server.git.uri=https://github.com/DonnieXu/spring-cloud-demo.git
+spring.cloud.config.server.git.uri=https://github.com/DonnieXu/spring-cloud-demo-config.git
 spring.cloud.config.server.git.searchPaths=spring-cloud-config-repository
 
 encrypt.key=foo
+
+encrypt.key-store.location=classpath:/server.jks
+encrypt.key-store.password=letmein
+encrypt.key-store.alias=mytestkey
+encrypt.key-store.secret=changeme
