--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'spring-cloud-demo'
 
 include 'cloud-config-server'
 include 'cloud-simple-server-a'
+include 'cloud-media-service'
 
