--- a/cloud-config-server/src/main/resources/application.properties
+++ b/cloud-config-server/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.cloud.config.server.git.searchPaths=spring-cloud-config-repository
 
 encrypt.key=foo
 
-encrypt.key-store.location=classpath:/server.jks
+encrypt.key-store.location=classpath:/curious.jks
 encrypt.key-store.password=letmein
-encrypt.key-store.alias=mytestkey
-encrypt.key-store.secret=changeme
+encrypt.key-store.alias=media
+encrypt.key-store.secret=letmein
