--- a/cloud-config-server/src/main/resources/application.properties
+++ b/cloud-config-server/src/main/resources/application.properties
@@ -8,3 +8,8 @@ encrypt.key-store.location=classpath:/curious.jks
 encrypt.key-store.password=letmein
 encrypt.key-store.alias=media
 encrypt.key-store.secret=letmein
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=spring
+spring.rabbitmq.password=123456
