--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 buildscript {
     ext {
-        springBootVersion = '1.3.5.RELEASE'
+        springBootVersion = '1.4.2.RELEASE'
     }
     repositories {
+        mavenLocal()
+        maven {url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         mavenCentral()
         jcenter()
     }
@@ -49,11 +51,11 @@ subprojects {
     }
 
     // Apply 'war' plugin for all war projects
-    configure([project(":cloud-config-server"),
-               project(":cloud-simple-server-a"),
+    configure([project(":cloud-eureka-server"),
+               project(":cloud-config-server"),
                project(":cloud-media-service"),
-               project(":cloud-eureka-server"),
-               project(":cloud-compute-service")]) {
+               project(":cloud-compute-service"),
+               project(":cloud-message-service")]) {
         apply plugin: 'war'
     }
 
@@ -93,29 +95,10 @@ project(':cloud-config-server') {
         // Spring Boot actuator
         compile("org.springframework.boot:spring-boot-starter-actuator")
         // Spring cloud bus
-//        compile("org.springframework.cloud:spring-cloud-starter-bus-amqp:${springCloudVersion}")
+        compile("org.springframework.cloud:spring-cloud-starter-bus-amqp:${springCloudVersion}")
         // Spring cloud eureka
         compile("org.springframework.cloud:spring-cloud-starter-eureka:${springCloudVersion}")
 
-    }
-}
-
-project(':cloud-simple-server-a') {
-    war {
-        classifier = 'cloud-simple-server-a'
-    }
-
-    dependencies {
-        // Spring Boot MVC
-        compile("org.springframework.boot:spring-boot-starter-web")
-        // Spring Boot actuator
-        compile("org.springframework.boot:spring-boot-starter-actuator")
-        // Spring cloud config
-        compile("org.springframework.cloud:spring-cloud-starter-config:${springCloudVersion}")
-        // Spring cloud config server
-        compile("org.springframework.cloud:spring-cloud-config-client:${springCloudVersion}")
-        // Spring cloud bus
-//        compile("org.springframework.cloud:spring-cloud-starter-bus-amqp:${springCloudVersion}")
     }
 }
 
@@ -125,20 +108,52 @@ project(':cloud-media-service') {
     }
 
     dependencies {
+        // Spring cloud eureka
+        compile("org.springframework.cloud:spring-cloud-starter-eureka:${springCloudVersion}")
         // Spring Boot MVC
         compile("org.springframework.boot:spring-boot-starter-web")
         // Spring Boot actuator
         compile("org.springframework.boot:spring-boot-starter-actuator")
+
+        compile("org.springframework.boot:spring-boot-starter-amqp")
         // Spring cloud config
         compile("org.springframework.cloud:spring-cloud-starter-config:${springCloudVersion}")
-        // Spring cloud config server
+        // Spring cloud config client
         compile("org.springframework.cloud:spring-cloud-config-client:${springCloudVersion}")
         // Spring cloud bus
-//        compile("org.springframework.cloud:spring-cloud-starter-bus-amqp:${springCloudVersion}")
+        compile("org.springframework.cloud:spring-cloud-starter-bus-amqp:${springCloudVersion}")
         // Spring Boot JPA
         compile("org.springframework.boot:spring-boot-starter-data-jpa")
         // MySQL Java Driver
         compile("mysql:mysql-connector-java")
+
+    }
+}
+
+project(':cloud-message-service') {
+    war {
+        classifier = 'cloud-message-service'
+    }
+
+    dependencies {
+        // Spring Boot MVC
+        compile("org.springframework.boot:spring-boot-starter-web")
+        // Spring Boot actuator
+        compile("org.springframework.boot:spring-boot-starter-actuator")
+        // Spring amqp
+        compile("org.springframework.boot:spring-boot-starter-amqp")
+        // Spring cloud eureka
+        compile("org.springframework.cloud:spring-cloud-starter-eureka:${springCloudVersion}")
+        // Spring cloud config
+        compile("org.springframework.cloud:spring-cloud-starter-config:${springCloudVersion}")
+        // Spring cloud config client
+        compile("org.springframework.cloud:spring-cloud-config-client:${springCloudVersion}")
+        // Spring cloud bus
+        compile("org.springframework.cloud:spring-cloud-starter-bus-amqp:${springCloudVersion}")
+//        // Spring Boot JPA
+//        compile("org.springframework.boot:spring-boot-starter-data-jpa")
+//        // MySQL Java Driver
+//        compile("mysql:mysql-connector-java")
 
     }
 }
@@ -156,5 +171,9 @@ project(':cloud-compute-service') {
         compile("org.springframework.boot:spring-boot-starter-web")
         // Spring Boot actuator
         compile("org.springframework.boot:spring-boot-starter-actuator")
+
+        compile("org.springframework.boot:spring-boot-starter-amqp")
+        // Spring cloud bus
+        compile("org.springframework.cloud:spring-cloud-starter-bus-amqp:${springCloudVersion}")
     }
 }
