--- a/cloud-media-service/src/main/resources/application.properties
+++ b/cloud-media-service/src/main/resources/application.properties
@@ -1,7 +1,16 @@
+#service itself
+spring.application.name=cloud-media
+server.port=7777
+
+#config related
 spring.cloud.config.uri=http://127.0.0.1:${config.port:8888}
 spring.cloud.config.name=cloud-media
 spring.cloud.config.profile=${config.profile:dev}
-#service discovery url
-#service name
-spring.application.name=cloud-media
-server.port=8082
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=spring
+spring.rabbitmq.password=123456
+
+#eureka discovery url
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
