--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,8 @@
 rootProject.name = 'spring-cloud-demo'
 
 include 'cloud-config-server'
-include 'cloud-simple-server-a'
 include 'cloud-media-service'
 include 'cloud-eureka-server'
 include 'cloud-compute-service'
+include 'cloud-message-service'
 
