--- a/cloud-config-server/src/main/resources/application.properties
+++ b/cloud-config-server/src/main/resources/application.properties
@@ -1,4 +1,7 @@
+#service itself
+spring.application.name=config-server
 server.port=8888
+
 spring.cloud.config.server.git.uri=https://github.com/DonnieXu/spring-cloud-demo-config.git
 spring.cloud.config.server.git.searchPaths=spring-cloud-config-repository
 
