--- a/cloud-eureka-server/src/main/resources/application.properties
+++ b/cloud-eureka-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #service itself
-spring.application.name=cloud-media
+spring.application.name=eureka-server
 server.port=1111
 
 eureka.client.register-with-eureka=false
