--- a/cloud-message-service/src/main/resources/application.properties
+++ b/cloud-message-service/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #service itself
-spring.application.name=cloud-message
+spring.application.name=message-service
 server.port=4444
 
 #config related
 spring.cloud.config.uri=http://127.0.0.1:${config.port:8888}
-spring.cloud.config.name=cloud-message
+spring.cloud.config.name=message-service
 spring.cloud.config.profile=${config.profile:dev}
 
 spring.rabbitmq.host=localhost
